styling done, need spacing on outer margin fixed

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,10 +15,12 @@ body {
   background-color: #4C4C4C;
   color: #FFF;
   height: 50px;
-  width: 50%;
+  // width: 50%;
   font-size: 40px;
   margin: 0 auto;
   text-align: right;
+
+
 }
 
 .button-norm {
@@ -31,6 +33,7 @@ body {
   padding: 15px;
   font-size: 20px;
   color: black;
+  cursor: pointer;
 
   &:hover {
     text-decoration: none;
@@ -46,4 +49,5 @@ body {
 .calculator {
   border: 1px solid #363636;
   box-shadow: 0px 11px 30px grey;
+  border-radius: 7px;
 }
